generated/DBSchemaParser.py
# Generated from grammar/DBSchema.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DBSchemaParser ( Parser ):

    grammarFileName = "DBSchema.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'migration'", "'desc'", "'author'", "'db'", 
                     "'schema'", "'table'", "'enum'", "'seed'", "'fk'", 
                     "'references'", "'index'", "'unique'", "'primary'", 
                     "'not'", "'null'", "'default'", "'{'", "'}'", "'('", 
                     "')'", "','", "';'", "'='" ]

    symbolicNames = [ "<INVALID>", "MIGRATION", "DESC", "AUTHOR", "DB", 
                      "SCHEMA", "TABLE", "ENUM", "SEED", "FK", "REFERENCES", 
                      "INDEX", "UNIQUE", "PRIMARY", "NOT", "NULL", "DEFAULT", 
                      "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COMMA", "SEMI", 
                      "EQ", "ID", "INT", "STRING", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_migrationFile = 0
    RULE_migrationDecl = 1
    RULE_migrationId = 2
    RULE_schemaDecl = 3
    RULE_schemaBody = 4
    RULE_schemaMember = 5
    RULE_tableDecl = 6
    RULE_tableBody = 7
    RULE_columnDecl = 8
    RULE_typeSpec = 9
    RULE_columnAttr = 10
    RULE_fkDecl = 11
    RULE_indexDecl = 12
    RULE_idList = 13
    RULE_enumDecl = 14
    RULE_seedDecl = 15
    RULE_seedRow = 16
    RULE_seedField = 17
    RULE_literal = 18
    RULE_functionCall = 19

    ruleNames =  [ "migrationFile", "migrationDecl", "migrationId", "schemaDecl", 
                   "schemaBody", "schemaMember", "tableDecl", "tableBody", 
                   "columnDecl", "typeSpec", "columnAttr", "fkDecl", "indexDecl", 
                   "idList", "enumDecl", "seedDecl", "seedRow", "seedField", 
                   "literal", "functionCall" ]

    EOF = Token.EOF
    MIGRATION=1
    DESC=2
    AUTHOR=3
    DB=4
    SCHEMA=5
    TABLE=6
    ENUM=7
    SEED=8
    FK=9
    REFERENCES=10
    INDEX=11
    UNIQUE=12
    PRIMARY=13
    NOT=14
    NULL=15
    DEFAULT=16
    LBRACE=17
    RBRACE=18
    LPAREN=19
    RPAREN=20
    COMMA=21
    SEMI=22
    EQ=23
    ID=24
    INT=25
    STRING=26
    WS=27
    LINE_COMMENT=28
    BLOCK_COMMENT=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MigrationFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DBSchemaParser.EOF, 0)

        def migrationDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DBSchemaParser.MigrationDeclContext)
            else:
                return self.getTypedRuleContext(DBSchemaParser.MigrationDeclContext,i)


        def schemaDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DBSchemaParser.SchemaDeclContext)
            else:
                return self.getTypedRuleContext(DBSchemaParser.SchemaDeclContext,i)


        def getRuleIndex(self):
            return DBSchemaParser.RULE_migrationFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMigrationFile" ):
                listener.enterMigrationFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMigrationFile" ):
                listener.exitMigrationFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMigrationFile" ):
                return visitor.visitMigrationFile(self)
            else:
                return visitor.visitChildren(self)




    def migrationFile(self):

        localctx = DBSchemaParser.MigrationFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_migrationFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==5:
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 40
                    self.migrationDecl()
                    pass
                elif token in [5]:
                    self.state = 41
                    self.schemaDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(DBSchemaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MigrationDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.author = None # Token
            self.db = None # Token

        def MIGRATION(self):
            return self.getToken(DBSchemaParser.MIGRATION, 0)

        def migrationId(self):
            return self.getTypedRuleContext(DBSchemaParser.MigrationIdContext,0)


        def LBRACE(self):
            return self.getToken(DBSchemaParser.LBRACE, 0)

        def DESC(self):
            return self.getToken(DBSchemaParser.DESC, 0)

        def STRING(self):
            return self.getToken(DBSchemaParser.STRING, 0)

        def AUTHOR(self):
            return self.getToken(DBSchemaParser.AUTHOR, 0)

        def DB(self):
            return self.getToken(DBSchemaParser.DB, 0)

        def schemaDecl(self):
            return self.getTypedRuleContext(DBSchemaParser.SchemaDeclContext,0)


        def RBRACE(self):
            return self.getToken(DBSchemaParser.RBRACE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DBSchemaParser.ID)
            else:
                return self.getToken(DBSchemaParser.ID, i)

        def getRuleIndex(self):
            return DBSchemaParser.RULE_migrationDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMigrationDecl" ):
                listener.enterMigrationDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMigrationDecl" ):
                listener.exitMigrationDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMigrationDecl" ):
                return visitor.visitMigrationDecl(self)
            else:
                return visitor.visitChildren(self)




    def migrationDecl(self):

        localctx = DBSchemaParser.MigrationDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_migrationDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(DBSchemaParser.MIGRATION)
            self.state = 50
            self.migrationId()
            self.state = 51
            self.match(DBSchemaParser.LBRACE)
            self.state = 52
            self.match(DBSchemaParser.DESC)
            self.state = 53
            self.match(DBSchemaParser.STRING)
            self.state = 54
            self.match(DBSchemaParser.AUTHOR)
            self.state = 55
            localctx.author = self.match(DBSchemaParser.ID)
            self.state = 56
            self.match(DBSchemaParser.DB)
            self.state = 57
            localctx.db = self.match(DBSchemaParser.ID)
            self.state = 58
            self.schemaDecl()
            self.state = 59
            self.match(DBSchemaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MigrationIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DBSchemaParser.ID, 0)

        def getRuleIndex(self):
            return DBSchemaParser.RULE_migrationId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMigrationId" ):
                listener.enterMigrationId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMigrationId" ):
                listener.exitMigrationId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMigrationId" ):
                return visitor.visitMigrationId(self)
            else:
                return visitor.visitChildren(self)




    def migrationId(self):

        localctx = DBSchemaParser.MigrationIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_migrationId)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(DBSchemaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SchemaDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCHEMA(self):
            return self.getToken(DBSchemaParser.SCHEMA, 0)

        def schemaBody(self):
            return self.getTypedRuleContext(DBSchemaParser.SchemaBodyContext,0)


        def getRuleIndex(self):
            return DBSchemaParser.RULE_schemaDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchemaDecl" ):
                listener.enterSchemaDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchemaDecl" ):
                listener.exitSchemaDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSchemaDecl" ):
                return visitor.visitSchemaDecl(self)
            else:
                return visitor.visitChildren(self)




    def schemaDecl(self):

        localctx = DBSchemaParser.SchemaDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_schemaDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(DBSchemaParser.SCHEMA)
            self.state = 64
            self.schemaBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SchemaBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DBSchemaParser.ID, 0)

        def LBRACE(self):
            return self.getToken(DBSchemaParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(DBSchemaParser.RBRACE, 0)

        def schemaMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DBSchemaParser.SchemaMemberContext)
            else:
                return self.getTypedRuleContext(DBSchemaParser.SchemaMemberContext,i)


        def getRuleIndex(self):
            return DBSchemaParser.RULE_schemaBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchemaBody" ):
                listener.enterSchemaBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchemaBody" ):
                listener.exitSchemaBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSchemaBody" ):
                return visitor.visitSchemaBody(self)
            else:
                return visitor.visitChildren(self)




    def schemaBody(self):

        localctx = DBSchemaParser.SchemaBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_schemaBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(DBSchemaParser.ID)
            self.state = 67
            self.match(DBSchemaParser.LBRACE)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0):
                self.state = 68
                self.schemaMember()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(DBSchemaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SchemaMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableDecl(self):
            return self.getTypedRuleContext(DBSchemaParser.TableDeclContext,0)


        def enumDecl(self):
            return self.getTypedRuleContext(DBSchemaParser.EnumDeclContext,0)


        def seedDecl(self):
            return self.getTypedRuleContext(DBSchemaParser.SeedDeclContext,0)


        def getRuleIndex(self):
            return DBSchemaParser.RULE_schemaMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchemaMember" ):
                listener.enterSchemaMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchemaMember" ):
                listener.exitSchemaMember(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSchemaMember" ):
                return visitor.visitSchemaMember(self)
            else:
                return visitor.visitChildren(self)




    def schemaMember(self):

        localctx = DBSchemaParser.SchemaMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_schemaMember)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.tableDecl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.enumDecl()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.seedDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TABLE(self):
            return self.getToken(DBSchemaParser.TABLE, 0)

        def ID(self):
            return self.getToken(DBSchemaParser.ID, 0)

        def LBRACE(self):
            return self.getToken(DBSchemaParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(DBSchemaParser.RBRACE, 0)

        def tableBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DBSchemaParser.TableBodyContext)
            else:
                return self.getTypedRuleContext(DBSchemaParser.TableBodyContext,i)


        def getRuleIndex(self):
            return DBSchemaParser.RULE_tableDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableDecl" ):
                listener.enterTableDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableDecl" ):
                listener.exitTableDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableDecl" ):
                return visitor.visitTableDecl(self)
            else:
                return visitor.visitChildren(self)




    def tableDecl(self):

        localctx = DBSchemaParser.TableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tableDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(DBSchemaParser.TABLE)
            self.state = 82
            self.match(DBSchemaParser.ID)
            self.state = 83
            self.match(DBSchemaParser.LBRACE)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16779776) != 0):
                self.state = 84
                self.tableBody()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(DBSchemaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnDecl(self):
            return self.getTypedRuleContext(DBSchemaParser.ColumnDeclContext,0)


        def fkDecl(self):
            return self.getTypedRuleContext(DBSchemaParser.FkDeclContext,0)


        def indexDecl(self):
            return self.getTypedRuleContext(DBSchemaParser.IndexDeclContext,0)


        def getRuleIndex(self):
            return DBSchemaParser.RULE_tableBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableBody" ):
                listener.enterTableBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableBody" ):
                listener.exitTableBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableBody" ):
                return visitor.visitTableBody(self)
            else:
                return visitor.visitChildren(self)




    def tableBody(self):

        localctx = DBSchemaParser.TableBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tableBody)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.columnDecl()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.fkDecl()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.indexDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DBSchemaParser.ID, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(DBSchemaParser.TypeSpecContext,0)


        def columnAttr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DBSchemaParser.ColumnAttrContext)
            else:
                return self.getTypedRuleContext(DBSchemaParser.ColumnAttrContext,i)


        def SEMI(self):
            return self.getToken(DBSchemaParser.SEMI, 0)

        def getRuleIndex(self):
            return DBSchemaParser.RULE_columnDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDecl" ):
                listener.enterColumnDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDecl" ):
                listener.exitColumnDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDecl" ):
                return visitor.visitColumnDecl(self)
            else:
                return visitor.visitChildren(self)




    def columnDecl(self):

        localctx = DBSchemaParser.ColumnDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_columnDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(DBSchemaParser.ID)
            self.state = 98
            self.typeSpec()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 94208) != 0):
                self.state = 99
                self.columnAttr()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 105
                self.match(DBSchemaParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DBSchemaParser.ID, 0)

        def LPAREN(self):
            return self.getToken(DBSchemaParser.LPAREN, 0)

        def INT(self):
            return self.getToken(DBSchemaParser.INT, 0)

        def RPAREN(self):
            return self.getToken(DBSchemaParser.RPAREN, 0)

        def getRuleIndex(self):
            return DBSchemaParser.RULE_typeSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpec" ):
                listener.enterTypeSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpec" ):
                listener.exitTypeSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpec" ):
                return visitor.visitTypeSpec(self)
            else:
                return visitor.visitChildren(self)




    def typeSpec(self):

        localctx = DBSchemaParser.TypeSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typeSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(DBSchemaParser.ID)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 109
                self.match(DBSchemaParser.LPAREN)
                self.state = 110
                self.match(DBSchemaParser.INT)
                self.state = 111
                self.match(DBSchemaParser.RPAREN)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnAttrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMARY(self):
            return self.getToken(DBSchemaParser.PRIMARY, 0)

        def UNIQUE(self):
            return self.getToken(DBSchemaParser.UNIQUE, 0)

        def NOT(self):
            return self.getToken(DBSchemaParser.NOT, 0)

        def NULL(self):
            return self.getToken(DBSchemaParser.NULL, 0)

        def DEFAULT(self):
            return self.getToken(DBSchemaParser.DEFAULT, 0)

        def literal(self):
            return self.getTypedRuleContext(DBSchemaParser.LiteralContext,0)


        def getRuleIndex(self):
            return DBSchemaParser.RULE_columnAttr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnAttr" ):
                listener.enterColumnAttr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnAttr" ):
                listener.exitColumnAttr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnAttr" ):
                return visitor.visitColumnAttr(self)
            else:
                return visitor.visitChildren(self)




    def columnAttr(self):

        localctx = DBSchemaParser.ColumnAttrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_columnAttr)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(DBSchemaParser.PRIMARY)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(DBSchemaParser.UNIQUE)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(DBSchemaParser.NOT)
                self.state = 117
                self.match(DBSchemaParser.NULL)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(DBSchemaParser.DEFAULT)
                self.state = 119
                self.literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FkDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FK(self):
            return self.getToken(DBSchemaParser.FK, 0)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(DBSchemaParser.LPAREN)
            else:
                return self.getToken(DBSchemaParser.LPAREN, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DBSchemaParser.ID)
            else:
                return self.getToken(DBSchemaParser.ID, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(DBSchemaParser.RPAREN)
            else:
                return self.getToken(DBSchemaParser.RPAREN, i)

        def REFERENCES(self):
            return self.getToken(DBSchemaParser.REFERENCES, 0)

        def SEMI(self):
            return self.getToken(DBSchemaParser.SEMI, 0)

        def getRuleIndex(self):
            return DBSchemaParser.RULE_fkDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFkDecl" ):
                listener.enterFkDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFkDecl" ):
                listener.exitFkDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFkDecl" ):
                return visitor.visitFkDecl(self)
            else:
                return visitor.visitChildren(self)




    def fkDecl(self):

        localctx = DBSchemaParser.FkDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_fkDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(DBSchemaParser.FK)
            self.state = 123
            self.match(DBSchemaParser.LPAREN)
            self.state = 124
            self.match(DBSchemaParser.ID)
            self.state = 125
            self.match(DBSchemaParser.RPAREN)
            self.state = 126
            self.match(DBSchemaParser.REFERENCES)
            self.state = 127
            self.match(DBSchemaParser.ID)
            self.state = 128
            self.match(DBSchemaParser.LPAREN)
            self.state = 129
            self.match(DBSchemaParser.ID)
            self.state = 130
            self.match(DBSchemaParser.RPAREN)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 131
                self.match(DBSchemaParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDEX(self):
            return self.getToken(DBSchemaParser.INDEX, 0)

        def ID(self):
            return self.getToken(DBSchemaParser.ID, 0)

        def LPAREN(self):
            return self.getToken(DBSchemaParser.LPAREN, 0)

        def idList(self):
            return self.getTypedRuleContext(DBSchemaParser.IdListContext,0)


        def RPAREN(self):
            return self.getToken(DBSchemaParser.RPAREN, 0)

        def UNIQUE(self):
            return self.getToken(DBSchemaParser.UNIQUE, 0)

        def SEMI(self):
            return self.getToken(DBSchemaParser.SEMI, 0)

        def getRuleIndex(self):
            return DBSchemaParser.RULE_indexDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexDecl" ):
                listener.enterIndexDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexDecl" ):
                listener.exitIndexDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexDecl" ):
                return visitor.visitIndexDecl(self)
            else:
                return visitor.visitChildren(self)




    def indexDecl(self):

        localctx = DBSchemaParser.IndexDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_indexDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(DBSchemaParser.INDEX)
            self.state = 135
            self.match(DBSchemaParser.ID)
            self.state = 136
            self.match(DBSchemaParser.LPAREN)
            self.state = 137
